# AMK

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_ES.md  SECURITY.md  WHITEPAPER.md  WHITEPAPER_ES.md  publish_to_pypi.sh  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: publish.yml
docs/: amk_master_blueprint.md  amk_persona.md  amk_whitepaper_es.md  architecture.md  green_ai_vision.md  monetization_guide.md  slm_roadmap.md
evomem/: __init__.py  code_evolution_memory.py  exporters.py  interaction_memory.py  regression_intelligence.py
evomem.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: README.md  basic_capture.py  dogfooding_watcher.py  export_to_vertex_ai.py  validate_and_promote.py
tests/: test_code_evolution.py  test_exporters.py  test_interaction_memory.py
