[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evomem"
version = "0.1.1"
description = "Evolutionary Memory System for capturing AI-human interactions and advancing Green AI."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
    {name = "Andrés Salazar Quintero", email = "asalazar@inecore.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/inecore/AMK"
"Bug Tracker" = "https://github.com/inecore/AMK/issues"
